# drf-dark-shade

./: README.md  pyproject.toml
drf_dark_shade/: renderers.py
drf_dark_shade/static/css/: deep-forest.css
drf_dark_shade/templates/: deep-forest.html
drf_dark_shade/templates/drf_dark_shade/: deep-forest.html
examples/: README.md
examples/djangoproject/: settings.py  urls.py  views.py
examples/templates/drf_dark_shade/: deep-forest.html
modern_drf_dark/static/css/: dark-horizon.css
modern_drf_dark/templates/: dark-horizon.html
